Fix for header z-index

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 .header__logo {
   width: 70px;
   height: 70px;
-  z-index: 10;
+  z-index: 999;
   top: -10px;
   left: 10px;
   position: relative;
@@ -24,6 +24,7 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
+  z-index: 999;
 }
 nav {
   padding: 0 15px;
@@ -281,6 +282,7 @@ a {
   position: relative;
   left: -6rem;
   top: 5rem;
+  z-index: -1;
 }
 @media all and (min-width: 960px) {
   .main-features {
@@ -330,12 +332,13 @@ a {
 }
 .main-service__item {
   text-align: center;
-  border-bottom: 1px #444 solid;
+  border-bottom: 2px solid #09249c;
+  box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.85);
   text-transform: uppercase;
   padding: 1.5rem 0;
 }
 .main-service__items {
-  background-color: rgb(10, 13, 77);
+  background-color: rgb(16, 19, 80);
   color: #ccc;
 }
 .main-service__item img {
@@ -416,7 +419,7 @@ a {
   .main-service__item:hover {
     cursor: pointer;
     transform: scale(1.01);
-    background-color: rgba(41, 139, 143, 0.8);
+    background-color: rgba(17, 18, 45, 0.8);
   }
   .main-service__item img {
     display: block;
